# BlogAppBackend

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  migrate.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
migrations/: 20241220000001_create_posts_table.up.sql  README.md
src/: main.rs
